# arduino

./: traffic_code.ino
AES_encryption_decryption/: AES_encryption_decryption.ino
DRV8874_test/: DRV8874_test.ino
ECG/: ECG.ino
ESP32_TFT_Test/: ESP32_TFT_Test.ino
Energy_management_esp_only/: Energy_management_esp_only.ino
Energy_management_esp_only_with_gsm/: ACS712.h  Energy_management_esp_only_with_gsm.ino
Energy_meter/: Energy_meter.ino  commands.h
Energy_meter_esp_only/: Energy_meter_esp_only.ino  thingProperties.h
FES_Devices_nano/: FES_Devices_nano.ino
FaceDoorEntryESP32Cam/: FaceDoorEntryESP32Cam.ino
Gas_leak_and_Fire_sensor/: Gas_leak_and_Fire_sensor.ino
HX_calibration/: HX_calibration.ino
IR_home_automation/: IR_home_automation.ino
P10_clock_three_display/: P10_clock_three_display.ino
RFID_servo/: RFID_servo.ino
SOLAR_HEATER/: SOLAR_HEATER.ino  dryer_code.docx  taffic_code.docx
Vault_door_lock/: Vault_door_lock.ino
a_green_house_thingspeak/: a_green_house_thingspeak.ino
a_green_house_thingspeak_esp/: a_green_house_thingspeak_esp.ino
arm_rrobot_code/: arm_rrobot_code.ino
attendance_system/: attendance_system.ino
attendance_system_main/: Code.gs  attendance_system_main.ino
automated_cooker/: automated_cooker.ino
automatic_change_over/: automatic_change_over.ino
automatic_change_over_no_gsm/: automatic_change_over_no_gsm.ino  automatic_change_over_no_gsm.txt
automatic_waste_bin/: automatic_waste_bin.ino
battery_charger/: battery_charger.docx  battery_charger.ino
battery_level/: battery_level.ino
battery_monitoring_system/: battery_monitoring_system.ino  code.docx
battery_monitoring_system_thingspeak/: battery_monitoring_system_thingspeak.ino
bi_phasic_test/: bi_phasic_test.ino
ble_client/: ble_client.ino
ble_new_client/: ble_new_client.ino
ble_new_server/: ble_new_server.ino
ble_server/: ble_server.ino
ble_test/: ble_test.ino
bluetooth_car_auto_manual_control/: bluetooth_car_auto_manual_control.ino  code.txt
bluetooth_car_control/: bluetooth_car_control.ino  code.docx  code.txt
bluetooth_home_automation/: bluetooth_home_automation.ino
bluetooth_planter/: bluetooth_planter.ino
bluetooth_spraying_robot/: bluetooth_spraying_robot.ino
bluetooth_test/: bluetooth_test.ino
blynks_home_automation/: blynks_home_automation.ino
blynks_home_automation_esp/: blynks_home_automation_esp.ino  command.h
blynks_home_automation_esp32/: blynks_home_automation_esp32.ino
bypass-detection/: bypass-detection.ino
calibrate/: calibrate.ino
capture_arduino/: capture_arduino.ino
car/: car.ino
carcoal/: carcoal.ino
charger/: charger.docx  charger.ino
circuit_breaker/: circuit_breaker.ino
defeathering_machine/: defeathering_code.docx  defeathering_machine.ino
dht_bmp/: dht_bmp.ino
digital_soil_moisture/: digital_soil_moisture.ino
distance_measuring/: distance_measuring.ino
drv_control_square/: drv_control_square.ino
dtmf_home_automation/: dtmf_home_automation.ino
energy_meter_no_iot/: energy_meter_no_iot.ino
esp32_acs712_test/: esp32_acs712_test.ino
esp32_bluetooth_test/: esp32_bluetooth_test.ino
esp32_p10/: esp32_p10.ino
esp_network/: esp_network.ino
fire_alarm_system/: fire_alarm_system.ino  fire_alarm_system_code.txt
gas_cylinder_level/: gas_cylinder_level.ino
gas_cylinder_level_esp/: gas_cylinder_level_esp.ino
gas_detection/: gas_detection.ino
gas_detection_servo/: gas_detection_servo.ino
gas_detection_setting/: gas_detection_setting.ino
gas_ldr/: gas_ldr.ino
gas_pir_sys/: gas_pir_sys.ino
green_house/: green_house.ino
libraries/Arduino_CloudUtils/extras/test/: CMakeLists.txt
libraries/Arduino_CloudUtils/extras/test/src/arduino/: Arduino.cpp  Arduino.h
libraries/Arduino_CloudUtils/extras/test/src/cbor/: test_cbor_decoder.cpp  test_cbor_encoder.cpp  test_cbor_standard_enc.cpp
libraries/Arduino_CloudUtils/extras/test/src/crc16/: test_crc16.cpp
libraries/Arduino_CloudUtils/extras/test/src/crc32/: test_crc32.cpp
libraries/Arduino_CloudUtils/extras/test/src/hex/: test_hex.cpp
libraries/Arduino_CloudUtils/extras/test/src/lzss/: test_decoder.cpp
libraries/Arduino_CloudUtils/extras/test/src/sha256/: test_sha256.cpp
libraries/Arduino_CloudUtils/extras/test/src/time/: test_TimedAttempt.cpp
libraries/Arduino_CloudUtils/extras/test/test_files/: test-1k.lzss  test-64k.lzss
libraries/Arduino_KVStore/extras/test/: CMakeLists.txt  README.md
libraries/Arduino_KVStore/extras/test/src/kvstore/: test_kvstore.cpp  test_kvstore_type.cpp
libraries/Arduino_NetworkConfigurator/: README.md  Taskfile.yml  library.properties  pyproject.toml
libraries/Arduino_NetworkConfigurator/examples/NetworkConfiguratorDemo/: NetworkConfiguratorDemo.ino
libraries/Arduino_NetworkConfigurator/examples/utility/DeleteConfiguration/: DeleteConfiguration.ino
libraries/Arduino_NetworkConfigurator/extras/test/: CMakeLists.txt
libraries/Arduino_NetworkConfigurator/extras/test/include/: Arduino.h
libraries/Arduino_NetworkConfigurator/extras/test/src/: test_provisioning_command_decode.cpp  test_provisioning_command_encode.cpp
libraries/Arduino_NetworkConfigurator/src/: ANetworkConfigurator_Config.h  Arduino_NetworkConfigurator.cpp  Arduino_NetworkConfigurator.h
libraries/Arduino_NetworkConfigurator/src/configuratorAgents/: AgentsManager.cpp  AgentsManager.h  MessagesDefinitions.h  NetworkOptionsDefinitions.h
libraries/Arduino_NetworkConfigurator/src/configuratorAgents/agents/: BLEAgent.h  ConfiguratorAgent.h  SerialAgent.h
libraries/Arduino_NetworkConfigurator/src/configuratorAgents/agents/boardConfigurationProtocol/: BoardConfigurationProtocol.cpp  BoardConfigurationProtocol.h  CBORAdapter.cpp  CBORAdapter.h  PacketBuffer.h  PacketManager.cpp  PacketManager.h
libraries/Arduino_NetworkConfigurator/src/configuratorAgents/agents/boardConfigurationProtocol/cbor/: CBOR.h  CBORInstances.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  ProvisioningMessage.h
libraries/Arduino_NetworkConfigurator/src/utility/: LEDFeedback.cpp  LEDFeedback.h  ResetInput.cpp  ResetInput.h
(+290 files in other folders)
